[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/UI/orange_bar.png" type="Texture" id=1]
[ext_resource path="res://Fonts/BoxesDream.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/Quiz/QuizUI.gd" type="Script" id=3]
[ext_resource path="res://Assets/UI/Quiz/quizbox.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/Quiz/answerbox.png" type="Texture" id=5]
[ext_resource path="res://Fonts/Piratekeg.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Fonts/Header-dinrundschriftmittel.otf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 42
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 42
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 42
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=5]
size = 84
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 64
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=7]
resource_name = "anim"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("QuizContainer/ColorRect/CenterContainer2/GetReady:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ "Get Ready", "3", "2", "1" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("QuizContainer/ColorRect/CenterContainer2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Quiz" type="Control"]
margin_right = 2340.0
margin_bottom = 1080.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.945098, 0.819608, 0.541176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuizContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -764.0
margin_top = -342.5
margin_right = 764.0
margin_bottom = 342.5
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="TextureRect" parent="QuizContainer"]
margin_right = 1528.0
margin_bottom = 615.0
rect_min_size = Vector2( 800, 300 )
texture = ExtResource( 4 )

[node name="HBoxContainer" type="VBoxContainer" parent="QuizContainer/ColorRect"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -508.0
margin_top = -323.0
margin_right = 508.0
margin_bottom = -73.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnswerContainer" type="HBoxContainer" parent="QuizContainer/ColorRect/HBoxContainer"]
margin_right = 1016.0
margin_bottom = 123.0
custom_constants/separation = 100
alignment = 1

[node name="A" type="TextureButton" parent="QuizContainer/ColorRect/HBoxContainer/AnswerContainer"]
margin_right = 458.0
margin_bottom = 123.0
rect_min_size = Vector2( 400, 120 )
texture_normal = ExtResource( 5 )

[node name="Text" type="Label" parent="QuizContainer/ColorRect/HBoxContainer/AnswerContainer/A"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "Jawaban A"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B" type="TextureButton" parent="QuizContainer/ColorRect/HBoxContainer/AnswerContainer"]
margin_left = 558.0
margin_right = 1016.0
margin_bottom = 123.0
rect_min_size = Vector2( 400, 120 )
texture_normal = ExtResource( 5 )

[node name="Text" type="Label" parent="QuizContainer/ColorRect/HBoxContainer/AnswerContainer/B"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "Jawaban B"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnswerContainer2" type="HBoxContainer" parent="QuizContainer/ColorRect/HBoxContainer"]
margin_top = 143.0
margin_right = 1016.0
margin_bottom = 266.0
custom_constants/separation = 100
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="C" type="TextureButton" parent="QuizContainer/ColorRect/HBoxContainer/AnswerContainer2"]
margin_right = 458.0
margin_bottom = 123.0
rect_min_size = Vector2( 400, 120 )
texture_normal = ExtResource( 5 )

[node name="Text" type="Label" parent="QuizContainer/ColorRect/HBoxContainer/AnswerContainer2/C"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "Jawaban C"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="D" type="TextureButton" parent="QuizContainer/ColorRect/HBoxContainer/AnswerContainer2"]
margin_left = 558.0
margin_right = 1016.0
margin_bottom = 123.0
rect_min_size = Vector2( 400, 120 )
texture_normal = ExtResource( 5 )

[node name="Text" type="Label" parent="QuizContainer/ColorRect/HBoxContainer/AnswerContainer2/D"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
text = "Jawaban D"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="QuizContainer/ColorRect"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -184.5
margin_right = 500.0
margin_bottom = -34.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question" type="Label" parent="QuizContainer/ColorRect/CenterContainer"]
margin_right = 1000.0
margin_bottom = 150.0
rect_min_size = Vector2( 1000, 150 )
custom_fonts/font = SubResource( 5 )
text = "Contoh Pertanyaan"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="QuizContainer/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -100.0
margin_right = 400.0
margin_bottom = 100.0
rect_min_size = Vector2( 800, 200 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GetReady" type="Label" parent="QuizContainer/ColorRect/CenterContainer2"]
margin_left = 171.0
margin_top = 62.0
margin_right = 628.0
margin_bottom = 137.0
custom_fonts/font = SubResource( 6 )
text = "Get Ready"

[node name="TimebarContainer" type="HBoxContainer" parent="QuizContainer"]
margin_top = 635.0
margin_right = 1528.0
margin_bottom = 685.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeBar" type="TextureProgress" parent="QuizContainer/TimebarContainer"]
margin_left = 264.0
margin_right = 1264.0
margin_bottom = 50.0
rect_min_size = Vector2( 1000, 50 )
step = 0.01
value = 100.0
texture_progress = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "anim"
anims/anim = SubResource( 7 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
[connection signal="pressed" from="QuizContainer/ColorRect/HBoxContainer/AnswerContainer/A" to="." method="_on_A_pressed"]
[connection signal="pressed" from="QuizContainer/ColorRect/HBoxContainer/AnswerContainer/B" to="." method="_on_B_pressed"]
[connection signal="pressed" from="QuizContainer/ColorRect/HBoxContainer/AnswerContainer2/C" to="." method="_on_C_pressed"]
[connection signal="pressed" from="QuizContainer/ColorRect/HBoxContainer/AnswerContainer2/D" to="." method="_on_D_pressed"]
